--- a/packages/xtask/Cargo.toml
+++ b/packages/xtask/Cargo.toml
@@ -7,3 +7,5 @@ publish = false
 
 [dependencies]
 xtask-wasm = { version = "0.1.1", features = ["wasm-opt"] }
+app = { path = "../app" }
+xshell = "0.1.17"
