--- a/packages/app/Cargo.toml
+++ b/packages/app/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-silkenweb = { version = "0.2.0", features = [
+silkenweb = { git = "https://github.com/silkenweb/silkenweb", features = [
     "server-side-render",
     "hydration",
 ] }
