--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,6 @@ members = ["packages/*"]
 codegen-units = 1
 lto = true
 opt-level = "z"
+
+[patch.crates-io]
+silkenweb-base = { git = "https://github.com/silkenweb/silkenweb" }
