Add more examples
- Client side rendering with trunk
- Server side rendering with axum

--- a/packages/app/Cargo.toml
+++ b/packages/app/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "app"
+name = "ssr-example-app"
 version = "0.1.0"
 authors = ["Simon Bourne <simonbourne@gmail.com>"]
 edition = "2021"
