--- a/packages/client-side-rendered/Cargo.toml
+++ b/packages/client-side-rendered/Cargo.toml
@@ -1,16 +1,14 @@
 [package]
-name = "xtask"
+name = "ssr-example-client-side-rendered"
 version = "0.1.0"
 authors = ["Simon Bourne <simonbourne@gmail.com>"]
 edition = "2021"
 publish = false
 
 [dependencies]
-xtask-wasm = { version = "0.1.8", features = ["wasm-opt"] }
-ssr-example-app = { path = "../app" }
-xshell = "0.2.2"
 silkenweb = { version = "0.3.0", features = [
     "server-side-render",
+    "hydration",
 ] }
-env_logger = "0.9.0"
-log = "0.4.14"
+ssr-example-app = { path = "../app" }
+wasm-bindgen = "0.2.83"
