--- a/packages/axum-server/Cargo.toml
+++ b/packages/axum-server/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
-name = "xtask"
+name = "ssr-example-axum-server"
 version = "0.1.0"
 authors = ["Simon Bourne <simonbourne@gmail.com>"]
 edition = "2021"
 publish = false
 
 [dependencies]
-xtask-wasm = { version = "0.1.8", features = ["wasm-opt"] }
 ssr-example-app = { path = "../app" }
-xshell = "0.2.2"
+axum = { version = "0.6.1", features = ["headers"] }
+tokio = { version = "1.21.2", features = ["full"] }
 silkenweb = { version = "0.3.0", features = [
     "server-side-render",
+    "hydration",
 ] }
-env_logger = "0.9.0"
-log = "0.4.14"
+web-log = "1.0.1"
+tower-http = { version = "0.3.4", features = ["fs"] }
