--- a/packages/client-side-rendered/Cargo.toml
+++ b/packages/client-side-rendered/Cargo.toml
@@ -6,9 +6,6 @@ edition = "2021"
 publish = false
 
 [dependencies]
-silkenweb = { version = "0.3.0", features = [
-    "server-side-render",
-    "hydration",
-] }
+silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
 ssr-example-app = { path = "../app" }
 wasm-bindgen = "0.2.83"
