--- a/packages/xtask/Cargo.toml
+++ b/packages/xtask/Cargo.toml
@@ -9,8 +9,6 @@ publish = false
 xtask-wasm = { version = "0.1.8", features = ["wasm-opt"] }
 ssr-example-app = { path = "../app" }
 xshell = "0.2.2"
-silkenweb = { version = "0.3.0", features = [
-    "server-side-render",
-] }
+silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
 env_logger = "0.9.0"
 log = "0.4.14"
