--- a/packages/app/Cargo.toml
+++ b/packages/app/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 publish = false
 
 [dependencies]
-silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
+silkenweb = "0.4.0"
 futures-signals = "0.3.31"
 web-log = "1.0.1"
