--- a/packages/axum-server/Cargo.toml
+++ b/packages/axum-server/Cargo.toml
@@ -9,6 +9,6 @@ publish = false
 ssr-example-app = { path = "../app" }
 axum = { version = "0.6.1", features = ["headers"] }
 tokio = { version = "1.21.2", features = ["full"] }
-silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
+silkenweb = "0.4.0"
 web-log = "1.0.1"
 tower-http = { version = "0.3.4", features = ["fs"] }
