--- a/packages/client-side-rendered/Cargo.toml
+++ b/packages/client-side-rendered/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 publish = false
 
 [dependencies]
-silkenweb = "0.4.0"
+silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
 ssr-example-app = { path = "../app" }
-wasm-bindgen = "0.2.83"
+wasm-bindgen = "0.2.84"
