--- a/packages/app/Cargo.toml
+++ b/packages/app/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 publish = false
 
 [dependencies]
-silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
+silkenweb = { workspace = true }
+web-log = { workspace = true }
 futures-signals = "0.3.31"
-web-log = "1.0.1"
