--- a/packages/axum-client/Cargo.toml
+++ b/packages/axum-client/Cargo.toml
@@ -9,5 +9,5 @@ publish = false
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
-ssr-example-app = { path = "../app" }
-wasm-bindgen = "0.2.84"
+ssr-example-app = { workspace = true }
+wasm-bindgen = { workspace = true }
