--- a/packages/axum-server/Cargo.toml
+++ b/packages/axum-server/Cargo.toml
@@ -6,10 +6,10 @@ edition = "2021"
 publish = false
 
 [dependencies]
-ssr-example-app = { path = "../app" }
+silkenweb = { workspace = true }
+ssr-example-app = { workspace = true }
+web-log = { workspace = true }
 axum = { version = "0.6.1", features = ["headers"] }
 tokio = { version = "1.21.2", features = ["full"] }
 tokio-util = { version = "0.7.8", features = ["rt"] }
-silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
-web-log = "1.0.1"
 tower-http = { version = "0.3.4", features = ["fs"] }
