--- a/packages/client-side-rendered/Cargo.toml
+++ b/packages/client-side-rendered/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 publish = false
 
 [dependencies]
-silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
-ssr-example-app = { path = "../app" }
-wasm-bindgen = "0.2.84"
+silkenweb = { workspace = true }
+ssr-example-app = { workspace = true }
+wasm-bindgen = { workspace = true }
