--- a/packages/xtask/Cargo.toml
+++ b/packages/xtask/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 publish = false
 
 [dependencies]
+silkenweb = { workspace = true }
+ssr-example-app = { workspace = true }
 xtask-wasm = { version = "0.1.8", features = ["wasm-opt"] }
-ssr-example-app = { path = "../app" }
 xshell = "0.2.2"
-silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
 env_logger = "0.9.0"
 log = "0.4.14"
