--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ lto = true
 opt-level = "z"
 
 [workspace.dependencies]
-silkenweb = { git = "https://github.com/silkenweb/silkenweb" }
+silkenweb = "0.5.0"
 ssr-example-app = { path = "packages/app" }
 wasm-bindgen = "0.2.84"
 web-log = "1.0.1"
