--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,7 +20,7 @@ jobs:
         toolchain: ${{ matrix.rust }}
         default: true
         components: clippy
-    - uses: Swatinem/rust-cache@3bb3a9a087029c7bc392586cdc88cb6f66b9c6ef
+    - uses: Swatinem/rust-cache@v2
       if: ${{ !env.ACT }}
     - run: cargo clippy --all-targets -- -D warnings -D clippy::all
     - run: cargo xtask build
@@ -41,7 +41,7 @@ jobs:
         toolchain: ${{ matrix.rust }}
         default: true
         components: rustfmt
-    - uses: Swatinem/rust-cache@3bb3a9a087029c7bc392586cdc88cb6f66b9c6ef
+    - uses: Swatinem/rust-cache@v2
       if: ${{ !env.ACT }}
     - uses: actions-rs/install@v0.1
       with:
